# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../nearlink_config.gni")


nearlink_server_sources = [
    "src/nearlink_host_server.cpp",
    "src/nearlink_hid_host_server.cpp",
    "src/nearlink_sle_advertiser_server.cpp",
    "src/nearlink_sle_datatransfer_server.cpp",
    "src/nearlink_sle_central_manager_server.cpp",
    "src/nearlink_utils_server.cpp",
    "src/nearlink_ssap_client_server.cpp",
    "src/nearlink_ssap_server_server.cpp",
    "src/nearlink_hadm_client_server.cpp",
    "src/nearlink_asc_server.cpp",
    "src/nearlink_vcp_client_server.cpp",
    "src/nearlink_tws_client_server.cpp",
    "src/nearlink_cdsm_client_server.cpp",
    "src/nearlink_cloud_pair_server.cpp",
    "src/nearlink_sle_controller_server.cpp",
]

config("nearlink_server_public_config") {
  visibility = [ ":*" ]

  cflags = []

  include_dirs = [
    "include",
    "$NEARLINK_ROOT/services/service/include",
    "$NEARLINK_ROOT/services/service/src/util",
    "$NEARLINK_ROOT/ipc_parcel/parcel",
  ]
}

ohos_shared_library("nearlink_server") {
  branch_protector_ret = "pac_ret"  # Enable PAC CFI
  
  ldflags = [
    "-flto",
    "-Wl,--gc-sections",
  ]

  sanitize = {
    cfi = true                             # Enable/disable control flow integrity detection
    cfi_vcall_icall_only = true            # CFI optimization, limit CFI check scope
    boundary_sanitize = true               # Enable boundary san detection
    cfi_cross_dso = true                   # Cross-SO CFI Checks
    integer_overflow = true                # Enable integer overflow detection
    ubsan = true                           # Enable some Ubsan options
    debug = false
  }

  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-Os",
    "-fno-exceptions",
    "-fno-rtti",
    "-flto",
  ]

  if (build_variant == "user") {
    cflags += [ "-DIS_NL_RELEASE_VERSION" ]
  }

  cflags_cc = cflags

  defines =  [
    "LOG_TAG = \"nearlink_server\"",
    "LOG_DOMAIN = 0xD000152",
  ]

  if (nearlink_service_kia_enable) {
    defines += [ "NEARLINK_KIA_ENABLE" ]
  }

  if (nearlink_service_edm_enable) {
    defines += [ "NEARLINK_EDM_ENABLE" ]
  }

  include_dirs = [
    "include",
    "$NEARLINK_ROOT/services/ipc/include",
    "$NEARLINK_ROOT/services/service/include",
    "$NEARLINK_ROOT/services/service/src/util",
    "$NEARLINK_ROOT/services/common/include",
    "$NEARLINK_ROOT/services/service/src/adapter",
    "$NEARLINK_ROOT/services/service/src/common",
    "$NEARLINK_ROOT/services/service/src/scan",
    "$NEARLINK_ROOT/interfaces/inner_api/include"
  ]

  sources = []
  sources += nearlink_server_sources

   public_configs = [ ":nearlink_server_public_config" ]

  deps = [
    "$NEARLINK_ROOT/services/etc/init:etc",
    "$NEARLINK_ROOT/services/etc/param:etc",
    "$NEARLINK_ROOT/services/ipc:nl_service_ipc",
    "$NEARLINK_ROOT/services/service:nearlink_service_impl",
    "$NEARLINK_ROOT/services/common:nearlink_service_common",
    "$NEARLINK_ROOT/utils:nearlink_utils",
    "$NEARLINK_ROOT/socket:nearlink_socket",
    "$NEARLINK_ROOT/ipc_parcel:nearlink_ipc_parcel",
    "$NEARLINK_ROOT/services/dft:nearlink_dft_manager",
    "$NEARLINK_ROOT/services/device_manager:nearlink_device_manager",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "ability_runtime:wantagent_innerkits",
    "init:libbegetutil",
    "time_service:time_client",
    "ipc:ipc_single",
    "qos_manager:concurrent_task_client",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
  ]

  if (nearlink_deps_hicollie_exist) {
    external_deps += [ "hicollie:libhicollie" ]
    defines += [ "HICOLLIE_ENABLE" ]
  }

  defines += product_defines
  version_script = "libnearlink_server.versionscript"

  part_name = "nearlink_service"
  subsystem_name = "communication"
}

# Note: Only for test
config("nearlink_server_test_public_config") {
  visibility = [ ":*" ]

  cflags = []

  include_dirs = [
    "include",
    "$NEARLINK_ROOT/services/ipc/include",
    "$NEARLINK_ROOT/services/service/include",
    "$NEARLINK_ROOT/services/service/src/util",
    "$NEARLINK_ROOT/services/common/include",
    "$NEARLINK_ROOT/services/service/src/adapter",
    "$NEARLINK_ROOT/services/service/src/common",
    "$NEARLINK_ROOT/services/service/src/scan",
    "$NEARLINK_ROOT/interfaces/inner_api/include"
  ]
}

# only for test
ohos_static_library("nearlink_server_static") {
  branch_protector_ret = "pac_ret"  # Enable PAC CFI
  sanitize = {
    cfi = true                             # Enable/disable control flow integrity detection
    cfi_cross_dso = true                   # Cross-SO CFI Checks
    debug = false
  }

  public_configs = [ ":nearlink_server_test_public_config" ]

  sources = []
  sources = nearlink_server_sources

  deps = [
    "$NEARLINK_ROOT/services/etc/init:etc",
    "$NEARLINK_ROOT/services/etc/param:etc",
    "$NEARLINK_ROOT/services/ipc:nl_service_ipc",
    "$NEARLINK_ROOT/services/service:nearlink_service_impl",
    "$NEARLINK_ROOT/frameworks/native:nearlink_framework",
    "$NEARLINK_ROOT/utils:nearlink_utils",
    "$NEARLINK_ROOT/socket:nearlink_socket",
    "$NEARLINK_ROOT/ipc_parcel:nearlink_ipc_parcel",
    "$NEARLINK_ROOT/services/dft:nearlink_dft_manager",
    "$NEARLINK_ROOT/services/device_manager:nearlink_device_manager",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "ability_runtime:wantagent_innerkits",
    "init:libbegetutil",
    "time_service:time_client",
    "qos_manager:concurrent_task_client",
    "hisysevent:libhisysevent",
    "hisysevent:libhisyseventmanager",
  ]

  part_name = "nearlink_service"
  subsystem_name = "communication"
}