# Copyright (C) 2026 Huawei Device Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../nearlink_config.gni")
import("test_utils.gni")

config("test_utils_config") {
  include_dirs = [
    "${nearlink_test_utils_path}",
  ]
}

# Only used for test
ohos_static_library("test_utils_static") {
  sources = [
    "nearlink_access_token_mock.cpp",
    "nearlink_native_token_mock.cpp"
  ]
  deps = [
    "$NEARLINK_ROOT/utils:nearlink_utils",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "communication"
  part_name = "nearlink_service"
}
